--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,12 @@ body {
     min-height: calc(100vh - 90px);
 }
 
+.header {
+    width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .content {
     margin-left: auto;
     margin-right: auto;
@@ -166,7 +172,11 @@ footer {
 }
 
 @media screen and (max-width: 980px) {
-
+    .content {
+        width: 768px;
+        margin-left: 2vw;
+        margin-right: 0;
+    }
 }
 
 @media screen and (max-width: 768px) {
