--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,7 +206,7 @@ footer {
     }
 
     .header-background {
-        height: 150px;
+        height: 120px;
     }
     
     #name {
@@ -214,11 +214,17 @@ footer {
         margin-left: 0;
     }
 
-    /* .nav {
-        position: relative;
-        bottom: 0;
+    nav {
+        margin-top: 5px;
+        padding-right: 17vw;
+        margin-right: 0;
         width: 100%;
-    } */
+    }
+
+    .navigate {
+        font-size: 2.5vw;
+        width: 11vw;
+    }
 
     #selfie {
         width: 100%;
