--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,6 +185,10 @@ footer {
         margin-left: 2vw;
         margin-right: 0;
     }
+
+    .alignRight {
+        margin-right: 0;
+    }
 }
 
 @media screen and (max-width: 768px) {
