Added image responsiveness to all img tags and .imgLink in style.css at the 768px media breakpoint in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,6 +201,11 @@ footer {
         width: 45vw;
         height: auto;
     }
+
+    img, .imgLink {
+        width: 40vw;
+        height: auto;
+    }
 }
 
 @media screen and (max-width: 640px) {
