Added img and .imgLink styling and responsiveness at the 640px media breakpoint in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,4 +238,9 @@ footer {
     #selfie {
         width: 100%;
     }
+
+    img, .imgLink {
+        width: 100%;
+        height: auto;
+    }
 }
