Added hangman homework to portfolio and updated image styling in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,11 @@ section {
     line-height: 2;
 }
 
+img {
+    height: 100%;
+    width: 100%;
+}
+
 .imgLink {
     height: 240px;
     width: 280px;
