--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,12 @@ h1 {
     font-weight: bold;
 }
 
+h2 {
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-size: 26px;
+    text-decoration: underline;
+}
+
 #name {
     float: left;
     text-align: center;
